added /restaurants route